--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -5,6 +5,9 @@
 # Throttling
 MaxNumberOfPlayers=100
 
+# FAST MODE  - USE SAME CPU UTILIZATION AS GENISYSPRO ( PORTEDD )
+FASTMODDE: FALSE
+
 #UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
