More on commands

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -136,3 +136,4 @@ TracePackets.Verbosity.McpeInventoryTransactionPacket=1
 TracePackets.Verbosity.McpePlayerHotbar=1
 TracePackets.Verbosity.McpeInventoryContent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
+TracePackets.Verbosity.McpeCommandRequest=3
