Form UI with example. Not that the API is a lot more powerful than what it may appear. Check the SafePay example plugin for a complete workflow.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -137,3 +137,4 @@ TracePackets.Verbosity.McpePlayerHotbar=1
 TracePackets.Verbosity.McpeInventoryContent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeCommandRequest=3
+TracePackets.Verbosity.McpeModalFormResponse=3
