Fix item pickups. Not entirely correct, but works as before. Uncovered a lot of bugs tho, so need a lot of work to make it proper.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -30,8 +30,8 @@ CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Gamerules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
