Fix crafting. Works for both grids. Added geometry support. Advanced options with animations and sample code included in the Code4Fun plugin.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -30,8 +30,8 @@ CalculateLights=true
 CalculateLights.MakeMovie=false
 
 # Gamerules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
@@ -39,7 +39,7 @@ GameMode=Survival
 #Difficulty=Normal
 #Difficulty=Hard
 #Difficulty=Hardcores
-#CheckForSafeSpawn=true
+CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=false
 IsWorldTimeStarted=false
