--- a/src/MiNET/MiNET.Test/MiNET.Test.csproj
+++ b/src/MiNET/MiNET.Test/MiNET.Test.csproj
@@ -120,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <Content Include="geometry.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
