Cleanup of encryption code a bit.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -9,7 +9,7 @@ MaxNumberOfPlayers=1000
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=false
+UseEncryption=true
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -23,15 +23,15 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=8
-MaxViewDistance=8
+ViewDistance=20
+MaxViewDistance=11
 MoveRenderDistance=1
 CalculateLights=true
-CalculateLights.MakeMovie=false
+#CalculateLights.MakeMovie=false
 
 # Gamerules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 #Difficulty=Peaceful	
@@ -40,9 +40,9 @@ GameMode=Creative
 #Difficulty=Hard
 #Difficulty=Hardcores
 CheckForSafeSpawn=true
-EnableBlockTicking=false
-EnableChunkTicking=false
-IsWorldTimeStarted=false
+EnableBlockTicking=true
+EnableChunkTicking=true
+IsWorldTimeStarted=true
 KeepInventory=true
 
 # Bad light worlds
@@ -53,10 +53,10 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
-PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
