--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,7 +23,7 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=20
+ViewDistance=15
 MaxViewDistance=11
 MoveRenderDistance=1
 CalculateLights=true
@@ -53,10 +53,10 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
