Change how light is calculated. Now calculates in real time whenever loading the chunk from disk. Not finished with this yet, because it's a big change. Fix entity AI. Lots of it. General mob movements, collision detetction, path search (wider, but smarter), etc. WIP.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -40,8 +40,8 @@ GameMode=Survival
 #Difficulty=Hard
 #Difficulty=Hardcores
 CheckForSafeSpawn=true
-EnableBlockTicking=true
-EnableChunkTicking=true
+#EnableBlockTicking=true
+#EnableChunkTicking=true
 IsWorldTimeStarted=true
 KeepInventory=true
 
@@ -56,16 +56,16 @@ KeepInventory=true
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
-PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
