Lots of improvements to AI. Windows timer frequence decrease to interrupt every 1ms instead of 15. Added profiler for timings. Mostly used for world-ticks.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -41,9 +41,12 @@ GameMode=Survival
 #Difficulty=Hardcores
 CheckForSafeSpawn=true
 #EnableBlockTicking=true
-#EnableChunkTicking=true
+EnableChunkTicking=true
 IsWorldTimeStarted=true
 KeepInventory=true
+
+Pathfinder.PrintPath=false
+Profiler.Enabled=true
 
 # Bad light worlds
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
