Fix NPE on level because of profiler.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -9,7 +9,7 @@ MaxNumberOfPlayers=1000
 #MaxNumberOfConcurrentConnects=1
 #InactivityTimeout=2000
 
-UseEncryption=true
+#UseEncryption=true
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -23,7 +23,7 @@ EnableEdu=true
 
 WorldProvider=anvil
 
-ViewDistance=15
+ViewDistance=12
 MaxViewDistance=11
 MoveRenderDistance=1
 CalculateLights=true
@@ -46,7 +46,7 @@ IsWorldTimeStarted=true
 KeepInventory=true
 
 Pathfinder.PrintPath=false
-Profiler.Enabled=true
+#Profiler.Enabled=true
 
 # Bad light worlds
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
