--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -41,7 +41,7 @@ GameMode=Survival
 #Difficulty=Hardcores
 CheckForSafeSpawn=true
 #EnableBlockTicking=true
-EnableChunkTicking=true
+#EnableChunkTicking=true
 IsWorldTimeStarted=true
 KeepInventory=true
 
@@ -62,13 +62,13 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
