Fix worldtime, proper (phases). Fix crafting recipe for the strange client-side stuff with UUID. Incuding things like banners. Started working on game rules. Using more now.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,25 +1,13 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-# Socket binding
-#ip=0.0.0.0
-#port=19134
-
-# Throttling
-MaxNumberOfPlayers=1000
-#MaxNumberOfConcurrentConnects=1
-#InactivityTimeout=2000
-
-#UseEncryption=true
+UseEncryption=true
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
 
-#EnableStatistics=true
-#EnableSecurity=true
-
 motd=§6§l» §r§6gurun§7Hacking§6§l «§r
 motd-2nd=§6MiNET
-EnableEdu=true
+#EnableEdu=true
 
 WorldProvider=anvil
 
@@ -29,7 +17,7 @@ MoveRenderDistance=1
 CalculateLights=true
 #CalculateLights.MakeMovie=false
 
-# Gamerules
+# Game mode and rules
 GameMode=Survival
 #GameMode=Creative
 #GameMode=Spectator
@@ -42,10 +30,10 @@ GameMode=Survival
 CheckForSafeSpawn=true
 #EnableBlockTicking=true
 #EnableChunkTicking=true
-IsWorldTimeStarted=true
-KeepInventory=true
+GameRule.DoDaylightcycle=true
+GameRule.KeepInventory=true
 
-Pathfinder.PrintPath=false
+#Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
 # Bad light worlds
@@ -115,7 +103,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-Plotter.Enabled=false
+#Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
 
