New game rule: RandomTickSpeed. From PC. Can not be set from command just yet.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -11,8 +11,8 @@ motd-2nd=§6MiNET
 
 WorldProvider=anvil
 
-ViewDistance=12
-MaxViewDistance=11
+ViewDistance=32
+MaxViewDistance=32
 MoveRenderDistance=1
 CalculateLights=true
 #CalculateLights.MakeMovie=false
@@ -20,16 +20,10 @@ CalculateLights=true
 # Game mode and rules
 GameMode=Survival
 #GameMode=Creative
-#GameMode=Spectator
-#GameMode=Adventure
-#Difficulty=Peaceful	
-#Difficulty=Easy
-#Difficulty=Normal
-#Difficulty=Hard
-#Difficulty=Hardcores
 CheckForSafeSpawn=true
-#EnableBlockTicking=true
-#EnableChunkTicking=true
+EnableBlockTicking=true
+EnableChunkTicking=true
+GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
