--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=true
+UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -11,15 +11,15 @@ motd-2nd=§6MiNET
 
 WorldProvider=anvil
 
-ViewDistance=15
-MaxViewDistance=15
+ViewDistance=11
+MaxViewDistance=11
 MoveRenderDistance=1
 CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
@@ -44,7 +44,7 @@ GameRule.KeepInventory=true
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 
 # UHC maps
@@ -53,7 +53,8 @@ PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
-#PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+#PCWorldFolder=D:\Temp\UHCr1000
+PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
@@ -97,7 +98,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#Plotter.Enabled=false
+Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
 
