Fix map info. Added dimension byte. Fix reading time info from anvil worlds. Used the tick instead of daytime :-o

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -44,7 +44,7 @@ GameRule.KeepInventory=true
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 
 # UHC maps
@@ -54,7 +54,7 @@ GameRule.KeepInventory=true
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Temp\UHCr1000
-PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+#PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
