More work on AI. Refactoring entity movements. Separated targeting from other tasks to simplify concerns or behaviours.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -27,7 +27,7 @@ GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
-#Pathfinder.PrintPath=true
+Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
 # Bad light worlds
@@ -44,17 +44,17 @@ GameRule.KeepInventory=true
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-PCWorldFolder=D:\Development\DOES NOT EXIST
+#PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
-#PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+#PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
