--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AStarNavigator" version="1.0.63" targetFramework="net461" />
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
   <package id="Castle.Core" version="4.1.0" targetFramework="net461" />
   <package id="jose-jwt" version="2.3.0" targetFramework="net461" />
+  <package id="MiNET.astar" version="1.0.12" targetFramework="net461" />
   <package id="MiNET.fnbt" version="0.6.9" targetFramework="net461" />
   <package id="Moq" version="4.7.49" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
