--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -33,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AStarNavigator, Version=1.0.63.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AStarNavigator.1.0.63\lib\net35\AStarNavigator.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="AStarNavigator, Version=1.0.12.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MiNET.astar.1.0.12\lib\net461\AStarNavigator.dll</HintPath>
     </Reference>
     <Reference Include="fNbt, Version=0.6.9.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MiNET.fnbt.0.6.9\lib\net35-client\fNbt.dll</HintPath>
@@ -355,7 +354,7 @@
     <Compile Include="Entities\Behaviors\IBehavior.cs" />
     <Compile Include="Entities\Behaviors\JumpAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\LookAtPlayerBehavior.cs" />
-    <Compile Include="Entities\Behaviors\MeeleAttackBehavior.cs" />
+    <Compile Include="Entities\Behaviors\MeleeAttackBehavior.cs" />
     <Compile Include="Entities\Behaviors\MobController.cs" />
     <Compile Include="Entities\Behaviors\OwnerHurtByTargetBehavior.cs" />
     <Compile Include="Entities\Behaviors\OwnerHurtTargetBehavior.cs" />
@@ -778,7 +777,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
