Inventory fixes. Virtual on most essential methods. Simplify handling of hand held items. Cleaned out most of the code related to this. Removed cheat-protection (item signer). Refactored path-finding further. WIP.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -27,7 +27,7 @@ GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
-Pathfinder.PrintPath=true
+#Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
 # Bad light worlds
