Fix breaking particles for blocks.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,8 +18,8 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
@@ -38,7 +38,7 @@ GameRule.KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
@@ -50,7 +50,7 @@ GameRule.KeepInventory=true
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr1000
-PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
+#PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
