Fix commands with block position and other things.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,8 +23,8 @@ GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
-GameRule.DoMobspawning=true
-GameRule.DoDaylightcycle=true
+GameRule.DoMobspawning=false
+GameRule.DoDaylightcycle=false
 GameRule.KeepInventory=true
 
 #Pathfinder.PrintPath=true
@@ -38,7 +38,7 @@ GameRule.KeepInventory=true
 #PCWorldFolder=D:\Development\Repos\MapsPE\sw.clockwork
 
 # Wworld with nether/end
-PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
+#PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000\world
 #PCWorldFolder=D:\Development\Worlds\Vanilla 5000x5000 - Nether\world
 
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
