Command aliases work again on 1.2. Send gamerules 2x (uh) just as vanilla does it. Will disable later because it's stupid. Sending commands pre-start game.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,8 +18,8 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
@@ -101,6 +101,9 @@ QuackCore.Enabled=false
 Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
+PushToTheLimit.Enabled=false
+Code4Fun.Enabled=false
+SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
