Fix item drops and pickups. Works much better now, and deals with more edge cases.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,13 +18,13 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
-GameRule.DoMobspawning=false
-GameRule.DoDaylightcycle=false
+GameRule.DoMobspawning=true
+GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
 #Pathfinder.PrintPath=true
