FIX: Drop when mob dies, not after animation. FIX: Don't adjust movement when mob is not on ground. FIX: Don't spawn overworld mobs in nether.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -46,6 +46,8 @@ GameRule.KeepInventory=true
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
+PCWorldFolder=D:\Temp\TestSave
+Save.Enabled=true
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -98,6 +100,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
+#SurvivalCraft.Enabled=false
 Plotter.Enabled=false
 BuilderBase.Enabled=false
 Pets.Enabled=false
