--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="PushToTheLimitCommands.cs" />
     <Compile Include="SafePay\SafePayPlugin.cs" />
+    <Compile Include="SurivalCraft\SurvivalCraftPlugin.cs" />
     <Compile Include="TestPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
