Spinders climb and mobs move even better when stepping up and down blocks.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -21,13 +21,13 @@ CalculateLights=true
 GameMode=Survival
 #GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=true
+EnableBlockTicking=false
 EnableChunkTicking=true
 GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
-#Pathfinder.PrintPath=true
+Pathfinder.PrintPath=true
 #Profiler.Enabled=true
 
 # Bad light worlds
@@ -46,8 +46,8 @@ GameRule.KeepInventory=true
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
-PCWorldFolder=D:\Temp\TestSave
-Save.Enabled=true
+#PCWorldFolder=D:\Temp\TestSave
+#Save.Enabled=true
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -55,22 +55,18 @@ Save.Enabled=true
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
-#PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
 #PCWorldFolder=D:\Development\Worlds\RAMM-Craft Hedgeland Map\RAMM-Craft Hedgeland Map
-#PCWaterOffset=30
 #PCWorldFolder=D:\Development\Worlds\Beijing 2014-08-16
 #PCWorldFolder=D:\Development\Worlds\Sky Wars by JJtCool
-#PCWaterOffset=55
 #PCWorldFolder=D:\Development\Worlds\Sky Wars 2.0 By JJtCool
-#PCWaterOffset=65
 #PCWorldFolder=D:\Downloads\Phain\Phain
 #PCWorldFolder=D:\Downloads\GreatFireOf1666-preFire\GreatFireOf1666-preFireV0.05
 #PCWorldFolder=D:\Downloads\Spawn World File (1)\Spawn_World
-#PCWaterOffset=60
 
 # GOOD HUBS
 #PCWorldFolder=D:\Development\Worlds\TopixMedia Lobby
