Fix skulls https://i.imgur.com/WLqK0Ms.png loading from Anvil.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,8 +18,8 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
@@ -27,7 +27,7 @@ GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
-Pathfinder.PrintPath=true
+Pathfinder.PrintPath=false
 #Profiler.Enabled=true
 
 # Bad light worlds
@@ -55,8 +55,8 @@ Pathfinder.PrintPath=true
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
-PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
-#PCWorldFolder=D:\Temp\UHCr1000
+#PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
+PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
