Provide error message for authorize attribute. Can be set to a default using server.properties. Otherwise set it in the attribute. Use {0} for player permission and {1} for required permission (see default message).

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -56,7 +56,7 @@ Pathfinder.PrintPath=false
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
-PCWorldFolder=D:\Temp\UHCr1000
+#PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
