Fix armor with new transations. Also make sure enchanting works as intended even tho it is not properly checked at this time.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,12 +18,12 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
-GameRule.DoMobspawning=true
+GameRule.DoMobspawning=false
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
