--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -23,7 +23,7 @@ GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
-GameRule.DoMobspawning=false
+GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
@@ -56,7 +56,7 @@ Pathfinder.PrintPath=false
 
 # Cool worlds for testing
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
-PCWorldFolder=D:\Temp\UHCr1000
+#PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
 #PCWorldFolder=D:\Downloads\KingsLanding1\KingsLanding1
 #PCWorldFolder=D:\Development\Worlds\GreatFireOf1666-preFire (1)\GreatFireOf1666-preFireV0.05
@@ -77,7 +77,7 @@ PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Temp\EmptyWorld
 #PCWorldFolder=D:\Temp\MCPEWorldStore
 
-EnableCommands=true
+EnableCommands=false
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug;../../../MiNET.Plotter/bin/Debug
@@ -98,7 +98,7 @@ QuackCore.Enabled=false
 #CoreCommands.Enabled=false
 #SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
@@ -108,6 +108,7 @@ SafePay.Enabled=false
 #TracePackets.Include=Mcpe.*
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Verbosity=0
+TracePackets.Verbosity.McpeClientToServerHandshake=1
 TracePackets.Verbosity.McpeAddEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
