Calculate proper light based on the time of day. Ripoff from vanilla PC, so don't ask how it actually calculates it. I just know how to use it.

--- a/src/MiNET/MiNET.Service/server.gurun.conf
+++ b/src/MiNET/MiNET.Service/server.gurun.conf
@@ -21,7 +21,7 @@ CalculateLights=true
 #GameMode=Survival
 GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=false
+EnableBlockTicking=true
 EnableChunkTicking=true
 GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
