--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=false
+UseEncryption=true
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -21,7 +21,7 @@ CalculateLights=true
 #GameMode=Survival
 GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=false
+EnableBlockTicking=true
 EnableChunkTicking=true
 GameRule.DoMobspawning=true
 GameRule.DoDaylightcycle=true
@@ -77,7 +77,7 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Temp\EmptyWorld
 #PCWorldFolder=D:\Temp\MCPEWorldStore
 
-EnableCommands=false
+EnableCommands=true
 
 #PluginDirectory=../../../TestPlugin/bin/Release;
 PluginDirectory=../../../TestPlugin/bin/Debug;../../../MiNET.BuilderBase/bin/Debug;../../../MiNET.Plotter/bin/Debug
