--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -34,3 +34,4 @@ TracePackets.Verbosity.McpeMobEquipment=1
 TracePackets.Verbosity.McpeExplode=1
 TracePackets.Verbosity.McpeEvent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
+TracePackets.Verbosity.McpeLevelSoundEvent=1
